--- a/archivesPage.html
+++ b/archivesPage.html
@@ -12,6 +12,7 @@
 	<!-- Bootstrap CSS -->
 <link rel="stylesheet" href="css/ArchivesPageStyle.css" >
 	<link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/footer.css">
 
 	<!-- Bootstrap JS -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -34,7 +35,7 @@
     <div class="nav-row">
 
       <div class="nav-side brand">
-        <a href="/">
+        <a href="/web1">
           <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10px;">
         </a>
       </div>
@@ -748,6 +749,7 @@ const swiper2 = new Swiper(".mySwiper2", {
   <!-- <a href="/קטגוריות/ארכיון/" class="btn">לתכניות נוספות לחצו כאן</a> -->
 </div>
 
-    <div id="footer"></div>
 
-</body></html>
+</body>
+<div id="footer" ></div>
+</html>
