--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="nav-row">
 
       <div class="nav-side brand">
-        <a href="/">
+        <a href="/web1">
           <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10px;">
         </a>
       </div>
@@ -200,7 +200,7 @@
     </div>
 
     <div class="video-frame">
-        <iframe src="https://www.youtube.com/embed/Aj517Jlx1go?si=BIxaojpVNrnVORyx" frameborder="0" allowfullscreen=""></iframe>
+        <iframe src="https://www.youtube.com/embed/VIdg0Ep6ITw?si=bOD1JFV1tJu0-dhm" frameborder="0" allowfullscreen=""></iframe>
     </div>
 
   </div>
