--- a/program.html
+++ b/program.html
@@ -38,7 +38,7 @@ document.addEventListener("DOMContentLoaded", () => {
     <div class="nav-row">
 
       <div class="nav-side brand">
-        <a href="/">
+        <a href="/web1">
           <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10px;">
         </a>
       </div>
