--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
               <i class="bi bi-play-circle-fill"></i>
             </div>
           </a>
-          <a href="program.html?id=music-tech" class="program-card" data-title="פודקאסט על מוזיקה וטכנולוגיה" data-desc='"פודקאסט על מוזיקה וטכנולוגיה" מיועד לכל מי שסקרן להבין את מהפכת המוזיקה והתרבות '>
-            <img src="media/בתןך-הפודקאסט-פי-2-1.jpg" alt="תכנית">
+          <a href="program.html?id=tov-shebatem" class="program-card" data-title="טוב שבאתם" data-desc='תכנית הצהריים החדשה של גלי צה"ל עם שלמור שטרוזמן, מירב פלדמן ואדם גבאי'>
+            <img src="media\בתןך-הפודקאסט-פי-2-1.png" alt="תכנית">
             <div class="play-button">
               <i class="bi bi-play-circle-fill"></i>
             </div>
