--- a/kidsPage.html
+++ b/kidsPage.html
@@ -126,7 +126,7 @@
     <div class="programs-grid">
             <div class="program-card text-center">
                 <a href="/תכניות/שבת-בבוקר-עם-ירדן-ודידי/">
-                    <img src="media/בתןך-הפודקא1סט-פי-2-1.png" alt="שבת בבוקר עם ירדן ודידי">
+                    <img src="media/goodmorning.png" alt="שבת בבוקר עם ירדן ודידי">
                     <h4>שבת בבוקר עם ירדן ודידי</h4>
                 </a>
             </div>
