--- a/musicPage.html
+++ b/musicPage.html
@@ -125,7 +125,7 @@
     <div class="programs-grid">
             <div class="program-card text-center">
                 <a href="/תכניות/ספיישלים-מוזיקלים/">
-                    <img src="media\טאב.png" alt="ספיישלים מוזיקלים">
+                    <img src="media/specials.png" alt="ספיישלים מוזיקלים">
                     <h4>ספיישלים מוזיקלים</h4>
                 </a>
             </div>
