--- a/podcastsPage.html
+++ b/podcastsPage.html
@@ -129,8 +129,8 @@
             </div>
             <div class="program-card">
                 <a href="/תכניות/עוד-זה-מדבר-וזה-בא/">
-                    <img src="media/בתןך-הפודקאסט-פי-2-3.png" alt="עוד זה מדבר וזה בא">
-                    <h4 class="text-center">עוד זה מדבר וזה בא1</h4>
+                    <img src="media\בתןך-הפודקאסט-פי-2-2.png" alt="עוד זה מדבר וזה בא">
+                    <h4 class="text-center">עוד זה מדבר וזה בא</h4>
                 </a>
             </div>
             <div class="program-card">
@@ -165,7 +165,7 @@
             </div>
             <div class="program-card">
                 <a href="/תכניות/סיליקון-ואדי-המדריך-לאקוסיסטם-הישראלי/">
-                    <img src="/media/ulup5cho/בתןך-הפודקאסט-פי-2-1.png" alt="סיליקון ואדי: המדריך לאקוסיסטם הישראלי">
+                    <img src="media/silikon.png" alt="סיליקון ואדי: המדריך לאקוסיסטם הישראלי">
                     <h4 class="text-center">סיליקון ואדי: המדריך לאקוסיסטם הישראלי</h4>
                 </a>
             </div>
@@ -195,13 +195,13 @@
             </div>
             <div class="program-card">
                 <a href="/תכניות/הסכת-ארצישראלי-מצוי/">
-                    <img src="/media/m4mbemml/2-1-1.png" alt="הסכת ארצישראלי מצוי">
+                    <img src="media/archi.png" alt="הסכת ארצישראלי מצוי">
                     <h4 class="text-center">הסכת ארצישראלי מצוי</h4>
                 </a>
             </div>
             <div class="program-card">
                 <a href="/תכניות/אלטלנה-שתי-נקודות-מבט/">
-                    <img src="/media/sa3mbzis/בתןך-הפודקאסט-פי-2-3.png" alt="אלטלנה - שתי נקודות מבט">
+                    <img src="media/talena.png" alt="אלטלנה - שתי נקודות מבט">
                     <h4 class="text-center">אלטלנה - שתי נקודות מבט</h4>
                 </a>
             </div>
@@ -213,31 +213,31 @@
             </div>
             <div class="program-card">
                 <a href="/תכניות/אנושי-אנושי-מדי/">
-                    <img src="/media/mnuhtfea/izxrl4b.png" alt="אנושי, אנושי מדי">
+                    <img src="media/enoshi.png" alt="אנושי, אנושי מדי">
                     <h4 class="text-center">אנושי, אנושי מדי</h4>
                 </a>
             </div>
             <div class="program-card">
                 <a href="/תכניות/מנוונים-חסרי-כבוד/">
-                    <img src="/media/511n2pei/2-5.jpg" alt="מנוונים חסרי כבוד">
+                    <img src="media/prize.jpg" alt="מנוונים חסרי כבוד">
                     <h4 class="text-center">מנוונים חסרי כבוד</h4>
                 </a>
             </div>
             <div class="program-card">
                 <a href="/תכניות/פודכספי/">
-                    <img src="/media/10ll2ku3/2-5.png" alt="פודכספי">
+                    <img src="media/caspi.png" alt="פודכספי">
                     <h4 class="text-center">פודכספי</h4>
                 </a>
             </div>
             <div class="program-card">
                 <a href="/תכניות/מה-שקורה-מחר/">
-                    <img src="/media/drmghpmw/2-4.png" alt="מה שקורה מחר">
+                    <img src="media/tomarrow.png" alt="מה שקורה מחר">
                     <h4 class="text-center">מה שקורה מחר</h4>
                 </a>
             </div>
             <div class="program-card">
                 <a href="/תכניות/וקבצנו-יחד/">
-                    <img src="/media/cpxnhroz/בתןך-הפודקאסט-פי-2-7.png" alt="וקבצנו יחד">
+                    <img src="media/together.png" alt="וקבצנו יחד">
                     <h4 class="text-center">וקבצנו יחד</h4>
                 </a>
             </div>
