--- a/archivesPage.html
+++ b/archivesPage.html
@@ -157,7 +157,7 @@
             </a>
             <a href="/תכניות/30-שנה-לציון-ללכתו-של-סשה-ארגוב/" class="card">
                 <div class="card small">
-                    <img src="media\יהודית רביץ בתוך.jpg" alt="img">
+                    <img src="media/klep.jpg" alt="img">
                 </div>
             </a>
 
@@ -555,7 +555,7 @@ hr {
                     </div>
                     <div class="swiper-slide" role="group" aria-label="8 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-אהוד-בנאי/" title="מרתון אהוד בנאי">
-                            <img src="media/z2il4mxi/בתןך-הפודקאסט-פי-2-6.jpg" alt="מרתון אהוד בנאי">
+                            <img src="media/ehod.jpg" alt="מרתון אהוד בנאי">
                             <h3>מרתון אהוד בנאי</h3>
                         </a>
                     </div>
@@ -637,7 +637,7 @@ const swiper = new Swiper(".mySwiper", {
                     </div>
                     <div class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 6" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/ארכיון-גלצ-יצחק-קלפטר/" title="ארכיון גל&quot;צ: יצחק קלפטר">
-                            <img src="/media/v3cfifn1/2-8.jpg" alt="ארכיון גל&quot;צ: יצחק קלפטר">
+                            <img src="media/klep.jpg" alt="ארכיון גל&quot;צ: יצחק קלפטר">
                             <h3>ארכיון גל"צ: יצחק קלפטר</h3>
                         </a>
                     </div>
@@ -699,7 +699,7 @@ const swiper2 = new Swiper(".mySwiper2", {
     <div class="programs-grid">
                 <div class="program-card text-center">
                     <a href="/תכניות/אוצרות-הארכיון/">
-                        <img src="/media/tz0dfroy/אוצרות-הארכיון-גדול.png" alt="אוצרות הארכיון">
+                        <img src="media/gold.png" alt="אוצרות הארכיון">
                         <h4>אוצרות הארכיון</h4>
                     </a>
                 </div>
@@ -711,7 +711,7 @@ const swiper2 = new Swiper(".mySwiper2", {
                 </div>
                 <div class="program-card text-center">
                     <a href="/תכניות/שאלות-אישיות-עם-שמעון-אלקבץ/">
-                        <img src="/media/ujahyoyu/שאלות-אישיות-גדול-1.png" alt="שאלות אישיות עם שמעון אלקבץ">
+                        <img src="media/ask.png" alt="שאלות אישיות עם שמעון אלקבץ">
                         <h4>שאלות אישיות עם שמעון אלקבץ</h4>
                     </a>
                 </div>
@@ -729,7 +729,7 @@ const swiper2 = new Swiper(".mySwiper2", {
                 </div>
                 <div class="program-card text-center">
                     <a href="/תכניות/ערב-שירי-משוררים/">
-                        <img src="/media/edhh5po5/2-5.jpg" alt="ערב שירי משוררים">
+                        <img src="media/erev.jpg" alt="ערב שירי משוררים">
                         <h4>ערב שירי משוררים</h4>
                     </a>
                 </div>
