--- a/culturePage.html
+++ b/culturePage.html
@@ -223,7 +223,7 @@
             </div>
             <div class="program-card">
                 <a href="/תכניות/הולכות-בחצות/">
-                    <img src="media/בתןך-הפודקאסט-פי-2-2.png" alt="הולכות בחצות">
+                    <img src="media/הולכות.png" alt="הולכות בחצות">
                     <h4 class="text-center">הולכות בחצות</h4>
                 </a>
             </div>
@@ -235,13 +235,13 @@
             </div>
             <div class="program-card">
                 <a href="/תכניות/קבלת-שבת/">
-                    <img src="/media/v5nijh5n/בתןך-הפודקאסט-פי-2.png" alt="קבלת שבת">
+                    <img src="media/kabalat.png" alt="קבלת שבת">
                     <h4 class="text-center">קבלת שבת</h4>
                 </a>
             </div>
             <div class="program-card">
                 <a href="/תכניות/זה-המקום-עם-אהוד-בנאי/">
-                    <img src="/media/tqtk55z0/בתןך-הפודקאסט-פי-2-7.png" alt="זה המקום עם אהוד בנאי">
+                    <img src="media/its.png" alt="זה המקום עם אהוד בנאי">
                     <h4 class="text-center">זה המקום עם אהוד בנאי</h4>
                 </a>
             </div>
@@ -253,7 +253,7 @@
             </div>
             <div class="program-card">
                 <a href="/תכניות/ספרים-רבותיי-ספרים/">
-                    <img src="/media/vl4bgt5o/בתןך-הפודקאסט-פי-2-9.png" alt="ספרים רבותיי ספרים">
+                    <img src="media/books.png" alt="ספרים רבותיי ספרים">
                     <h4 class="text-center">ספרים רבותיי ספרים</h4>
                 </a>
             </div>
