--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <i class="bi bi-play-circle-fill"></i>
             </div>
           </a>
-          <a href="/תכניות/מלך-בלייצר-חיים/" class="program-card" data-title="מלך בלייצר חיים" data-desc="בהסכת החדש של גלי צה&quot;ל, &quot;מלך בלייצר חיים&quot; בהגשת אבי הרוש, בכל פרק נארח אב שכול אחר לשיחה פתוחה על החיים שלפני, הקשיים וההתמודדויות ביום יום, החלומות, התחושות והמחשבות שמלווים אבות שכולים">
+          <a href="program.html?id=melechblayizerhaim" class="program-card" data-title="מלך בלייצר חיים" data-desc="בהסכת החדש של גלי צה&quot;ל, &quot;מלך בלייצר חיים&quot; בהגשת אבי הרוש, בכל פרק נארח אב שכול אחר לשיחה פתוחה על החיים שלפני, הקשיים וההתמודדויות ביום יום, החלומות, התחושות והמחשבות שמלווים אבות שכולים">
             <img src="media/אבי.jpg" alt="תכנית">
             <div class="play-button">
               <i class="bi bi-play-circle-fill"></i>
@@ -221,9 +221,9 @@
   <section class="promo-section">
     <div class="promo-container">
       <div class="promo-text">
-          <h2>30 שנים ללכתו של סשה ארגוב</h2>
-          <div class="promo-description">השירים של סשה ארגוב מלווים אותנו כבר עשרות שנים אבל אף פעם לא שמענו אותם ככה.  גלי צה"ל מציינת 30 שנה ללכתו של אחד מגדולי המלחינים בזמר העברי. נועם קליינשטיין, ניר כנען, ואלרי חמאתי, יגל אושרי ורוני וגיל בר הדס בביצועים חדשים לשיריו הגדולים.</div>
-        <a href="https://www.youtube.com/watch?v=f-frZ5XF-IU&amp;list=PLx4jClAH_07x9CG4a37tyAuV74QBVMS9K" target="_blank" rel="noopener noreferrer" class="promo-btn">לפלייליסט השירים המיוחד על סשה ארגוב</a>
+          <h2>55 שנה לפסטיבל שירי הילדים</h2>
+          <div class="promo-description">דורות גדלו על הקלאסיקות של פסטיבל שירי הילדים, שקשה להאמין עברו 55 שנה מאז עלה. בתכנית מיוחדת הכוכבים מאז וילדי הפלא החדשים מחדשים את שירי הילדות יחד 🪅</div>
+        <a href="https://www.youtube.com/watch?v=AeGfVdZqlEg&list=PLx4jClAH_07zUkjMqJC_ugt9ql3bf4z5U" target="_blank" rel="noopener noreferrer" class="promo-btn">לפלייליסט הביצועים המיוחדים של שירי הילדים</a>
       </div>
       <div class="promo-video">
           <!-- <video controls width="100%" poster="/media/0helh5da/&#x5D8;&#x5D0;&#x5D1;-&#x5E0;&#x5D5;&#x5E2;&#x5DD;.jpg">
@@ -233,7 +233,7 @@
 <iframe
   width="100%"
   height="315"
-  src="https://www.youtube.com/embed/YMxDjuyYcvE?si=VCzHPP0T2H8r7gNU"
+  src="https://www.youtube.com/embed/kkv5oOL-4VY?si=kxcwnLhyVg8t0LWY"
   allowfullscreen
   class="rounded shadow-sm">
 </iframe>      </div>
@@ -1292,8 +1292,42 @@ iframe {
     margin-top: 12px;
   }
 }
-
 </style>
+
+<!-- <section class="hero" style="background-image: url('media/טאב-נועם-Photoroom.png'); margin-top: -20px;">
+  <div class="hero-inner">
+
+    <div class="hero-col">
+      <div class="hero-title-wrap">
+        <span>מסע כומתה קומנדו</span>
+        <span style="margin-right: 85px;">אוג' 24 ???</span>
+      </div>
+      <p class="hero-sub">
+        אוג' 24 כבר לא צעירים?? אז זהו שלא. ממש לא אפילו.
+        השבוע הגענו למסע כומתה של עוצבת הקומנדו כדי לגלות מי העניק כומתה למי? כמה גאים ההורים? ואיזה חייל עשה את המסע
+        כומתה בקפיצות? הצטרפו, הולך להיות אדום!
+      </p>
+      <div class="a-div">
+        <a class="hero-cta" href="/תכניות/מסע-כומתות/">לצפייה בכל הפרקים</a>
+      </div>
+    </div>
+
+    <div class="hero-col">
+      <div class="video-frame-wrap">
+        <iframe src="https://www.youtube.com/embed/YMxDjuyYcvE?si=jUtQzbuUleY85nGMcontrols=1&amp;rel=0&amp;modestbranding=1" title="מסע כומתות | מסע כומתה עוצבת הקומנדו" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="" style="border-style: solid; border-color: #FFFFFF;"></iframe>
+      </div>
+      <div class="video-caption">עוד מחכה לאחד - נועם קלינשטיין</div>
+    </div>
+
+  </div>
+</section>
+
+
+
+<div style="height: 10px;"> </div> -->
+
+
+
 
 	<link rel="stylesheet" href="/css/footer.css">
 
