--- a/kidsPage.html
+++ b/kidsPage.html
@@ -138,7 +138,7 @@
             </div>
             <div class="program-card text-center">
                 <a href="/תכניות/תיבה-מזמרת/">
-                    <img src="/media/sz3ojbq3/2-2.jpg" alt="תיבה מזמרת">
+                    <img src="media/tiva.jpg" alt="תיבה מזמרת">
                     <h4>תיבה מזמרת</h4>
                 </a>
             </div>
