--- a/musicPage.html
+++ b/musicPage.html
@@ -131,7 +131,7 @@
             </div>
             <div class="program-card text-center">
                 <a href="/תכניות/בוא-שיר-עברי/">
-                    <img src="/media/tovptgvs/בתןך-הפודקאסט-פי-2-8.png" alt="בוא שיר עברי">
+                    <img src="media/bo.png" alt="בוא שיר עברי">
                     <h4>בוא שיר עברי</h4>
                 </a>
             </div>
@@ -143,7 +143,7 @@
             </div>
             <div class="program-card text-center">
                 <a href="/תכניות/מסע-עם-יורם-סוויסה/">
-                    <img src="/media/ak5hghvs/2-6.png" alt="מסע עם יורם סוויסה">
+                    <img src="media/masa.png" alt="מסע עם יורם סוויסה">
                     <h4>מסע עם יורם סוויסה</h4>
                 </a>
             </div>
@@ -191,7 +191,7 @@
             </div>
             <div class="program-card text-center">
                 <a href="/תכניות/לילה-ישראלי/">
-                    <img src="/media/loeon1yp/בתןך-הפודקאסט-פי-2-9.png" alt="לילה ישראלי">
+                    <img src="media/goodnight.png" alt="לילה ישראלי">
                     <h4>לילה ישראלי</h4>
                 </a>
             </div>
