--- a/podcastsPage.html
+++ b/podcastsPage.html
@@ -134,7 +134,7 @@
                 </a>
             </div>
             <div class="program-card">
-                <a href="/תכניות/מלך-בלייצר-חיים/">
+                <a href="program.html?id=melechblayizerhaim">
                     <img src="media/אבי.jpg" alt="מלך בלייצר חיים">
                     <h4 class="text-center">מלך בלייצר חיים</h4>
                 </a>
