--- a/musicPage.html
+++ b/musicPage.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;family=Rubik:ital,wght@0,300..900;1,300..900&amp;display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/footer.css">
+  <link rel="stylesheet" href="css/footer.css">
              
 	<!-- Bootstrap CSS -->
 
@@ -117,7 +117,7 @@
 
 
     <div class="header-with-icon">
-            <img src="/media/rtmczybg/מוזיקה.png" alt="מוזיקה" class="header-icon">
+            <img src="media/מוזיקה.png" alt="מוזיקה" class="header-icon">
 
         <h1 class="page-title" style="font-family: 'Assistant', sans-serif; font-size: 36px; font-weight: 700; color: #0B3D91; margin: 0;">
             מוזיקה</h1>
@@ -137,7 +137,7 @@
             </div>
             <div class="program-card text-center">
                 <a href="/תכניות/הגאם-של-קוטנר/">
-                    <img src="/media/jfbg5vc5/בתןך-הפודקאסט-פי-2-1-2.png" alt="הג'אם של קוטנר">
+                    <img src="media/kut.png" alt="הג'אם של קוטנר">
                     <h4>הג'אם של קוטנר</h4>
                 </a>
             </div>
@@ -149,46 +149,46 @@
             </div>
             <div class="program-card text-center">
                 <a href="/תכניות/שעתיים-אישיות-של-מוזיקה/">
-                    <img src="/media/m1yct3wo/בתןך-הפודקאסט-פי-2-6.png" alt="שעתיים אישיות של מוזיקה">
+                    <img src="media/2hours.png" alt="שעתיים אישיות של מוזיקה">
                     <h4>שעתיים אישיות של מוזיקה</h4>
                 </a>
             </div>
-            <div class="program-card text-center">
+            <!-- <div class="program-card text-center">
                 <a href="/תכניות/מאחורי-הצלילים/">
                     <img src="/media/slzncnvb/בתןך-הפודקאסט-פי-2-9.png" alt="מאחורי הצלילים">
                     <h4>מאחורי הצלילים</h4>
                 </a>
-            </div>
+            </div> -->
             <div class="program-card text-center">
                 <a href="/תכניות/גל-עברי-ירוק/">
-                    <img src="/media/qkzlgdsa/screenshot-2025-09-03-225906.png" alt="גל עברי ירוק">
+                    <img src="media/gal.png" alt="גל עברי ירוק">
                     <h4>גל עברי ירוק</h4>
                 </a>
             </div>
             <div class="program-card text-center">
                 <a href="/תכניות/ארבע-אחרי-הצהריים/">
-                    <img src="/media/ik3lx0uh/בתןך-הפודקאסט-פי-2-6.png" alt="ארבע אחרי הצהריים">
+                    <img src="media/arba.png" alt="ארבע אחרי הצהריים">
                     <h4>ארבע אחרי הצהריים</h4>
                 </a>
             </div>
             <div class="program-card text-center">
                 <a href="/תכניות/אולדיז/">
-                    <img src="/media/gizbylta/screenshot-2025-09-03-230809.png" alt="אולדיז">
+                    <img src="media/old.png" alt="אולדיז">
                     <h4>אולדיז</h4>
                 </a>
             </div>
             <div class="program-card text-center">
                 <a href="/תכניות/הדרן/">
-                    <img src="/media/ot1jwbjm/2-7.jpg" alt="הדרן">
+                    <img src="media/hadran.jpg" alt="הדרן">
                     <h4>הדרן</h4>
                 </a>
             </div>
-            <div class="program-card text-center">
+            <!-- <div class="program-card text-center">
                 <a href="/תכניות/ציפורי-לילה-יוסי-פיין-מעל-הזמן/">
-                    <img src="/media/1leei412/בתןך-הפודקאסט-פי-2-7.png" alt="ציפורי לילה: יוסי פיין מעל הזמן">
+                    <img src="media/1leei412/בתןך-הפודקאסט-פי-2-7.png" alt="ציפורי לילה: יוסי פיין מעל הזמן">
                     <h4>ציפורי לילה: יוסי פיין מעל הזמן</h4>
                 </a>
-            </div>
+            </div> -->
             <div class="program-card text-center">
                 <a href="/תכניות/לילה-ישראלי/">
                     <img src="media/goodnight.png" alt="לילה ישראלי">
