--- a/sadarotReshet.html
+++ b/sadarotReshet.html
@@ -132,14 +132,14 @@
                 </a>
             </div>
             <div class="program-card text-center">
-                <a href="/תכניות/טיול-לא-מאורגן/">
-                    <img src="/media/5nmhexsu/gemini_generated_image_arr9gnarr9gnarr9.png" alt="טיול לא מאורגן">
+                <a href="programsSeries.html?id=trip">
+                    <img src="media/טיול-לא-מאורגן-2.png" alt="טיול לא מאורגן">
                     <h4>טיול לא מאורגן</h4>
                 </a>
             </div>
             <div class="program-card text-center">
-                <a href="/תכניות/המיוחדים-של-גלצ/">
-                    <img src="/media/ut0flvh4/המיוחדים-של-גלצ.png" alt="המיוחדים של גל&quot;צ">
+                <a href="programsSeries.html?id=sepcial-glz">
+                    <img src="media/המיוחדים-של-גלצ.png" alt="המיוחדים של גל&quot;צ">
                     <h4>המיוחדים של גל"צ</h4>
                 </a>
             </div>
