--- a/kidsPage.html
+++ b/kidsPage.html
@@ -10,8 +10,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;family=Rubik:ital,wght@0,300..900;1,300..900&amp;display=swap" rel="stylesheet">
   	<link rel="stylesheet" href="css/footer.css">
-
-	<!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/CategoryStyle.css">
 
 	<!-- Bootstrap JS -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -102,55 +101,6 @@
 
 <!-- רווח עליון לתוכן כדי למנוע חפיפה -->
 <!-- <div style="height:84px;" > </div> -->
-
-	
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-
-	
-<link rel="stylesheet" href="css/CategoryStyle.css">
-
-
-    <title>ילדים ונוער</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-
-    <div class="header-with-icon">
-            <img src="media/ילדים-ונוער.png" alt="ילדים ונוער" class="header-icon">
-
-        <h1 class="page-title" style="font-family: 'Assistant', sans-serif; font-size: 36px; font-weight: 700; color: #0B3D91; margin: 0;">
-            ילדים ונוער</h1>
-    </div>
-    <div class="programs-grid">
-            <div class="program-card text-center">
-                <a href="/תכניות/שבת-בבוקר-עם-ירדן-ודידי/">
-                    <img src="media/goodmorning.png" alt="שבת בבוקר עם ירדן ודידי">
-                    <h4>שבת בבוקר עם ירדן ודידי</h4>
-                </a>
-            </div>
-            <div class="program-card text-center">
-                <a href="/תכניות/הבגרות-המשודרת/">
-                    <img src="/media/d0nogiet/2-3.jpg" alt="הבגרות המשודרת">
-                    <h4>הבגרות המשודרת</h4>
-                </a>
-            </div>
-            <div class="program-card text-center">
-                <a href="/תכניות/תיבה-מזמרת/">
-                    <img src="media/tiva.jpg" alt="תיבה מזמרת">
-                    <h4>תיבה מזמרת</h4>
-                </a>
-            </div>
-            <div class="program-card text-center">
-                <a href="/תכניות/האוניברסיטה-המשודרת-לילדים/">
-                    <img src="/media/5s2n0aje/2-6.jpg" alt="האוניברסיטה המשודרת לילדים">
-                    <h4>האוניברסיטה המשודרת לילדים</h4>
-                </a>
-            </div>
-    </div>
-
-
 <style>
     body {
         margin: 0;
@@ -245,6 +195,48 @@
         height: 110px;
     }
 </style>
+	
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>ילדים ונוער</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+
+    <div class="header-with-icon">
+            <img src="media/ילדים-ונוער.png" alt="ילדים ונוער" class="header-icon">
+
+        <h1 class="page-title" style="font-family: 'Assistant', sans-serif; font-size: 36px; font-weight: 700; color: #0B3D91; margin: 0;">
+            ילדים ונוער</h1>
+    </div>
+    <div class="programs-grid">
+            <div class="program-card text-center">
+                <a href="/תכניות/שבת-בבוקר-עם-ירדן-ודידי/">
+                    <img src="media/goodmorning.png" alt="שבת בבוקר עם ירדן ודידי">
+                    <h4>שבת בבוקר עם ירדן ודידי</h4>
+                </a>
+            </div>
+            <div class="program-card text-center">
+                <a href="/תכניות/הבגרות-המשודרת/">
+                    <img src="media/bagrut.jpg" alt="הבגרות המשודרת">
+                    <h4>הבגרות המשודרת</h4>
+                </a>
+            </div>
+            <div class="program-card text-center">
+                <a href="/תכניות/תיבה-מזמרת/">
+                    <img src="media/tiva.jpg" alt="תיבה מזמרת">
+                    <h4>תיבה מזמרת</h4>
+                </a>
+            </div>
+            <div class="program-card text-center">
+                <a href="/תכניות/האוניברסיטה-המשודרת-לילדים/">
+                    <img src="media/uni.jpg" alt="האוניברסיטה המשודרת לילדים">
+                    <h4>האוניברסיטה המשודרת לילדים</h4>
+                </a>
+            </div>
+    </div>
+
 
     <div id="footer"></div>
 
