--- a/favoritesPage.html
+++ b/favoritesPage.html
@@ -50,7 +50,7 @@
 
       <!-- שמאל – כפתורים -->
       <div class="nav-side actions mr-1">
-        <a href="/search.html" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
+        <a href="search.html" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
           <i class="fa-solid fa-magnifying-glass" style="font-size: 24px;"></i>
         </a>
 
