--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <h3>תרבות ופנאי</h3>
           </div>
           <div class="icon-item">
-            <a href="sadarotReshet.html">
+            <a href="sdarotReshetPage.html">
               <img src="media/סדרות-רשת-0d-1.png" alt="סדרות רשת">
             </a>
             <h3>סדרות רשת</h3>
