--- a/programsSeries.html
+++ b/programsSeries.html
@@ -14,7 +14,8 @@
     	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;family=Rubik:ital,wght@0,300..900;1,300..900&amp;display=swap" rel="stylesheet">
     	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/programsSeriesScript.js" ></script>
+      
+    <script src="js/programsSeriesScript.js" ></script>
 
 <style>
     body {
