--- a/archivesPage.html
+++ b/archivesPage.html
@@ -132,7 +132,7 @@
     <div class="grid row1">
             <a href="/תכניות/יום-הולדת-70-לדני-בסן/" class="card">
                 <div class="card large">
-                    <img src="media\יהודית רביץ בתוך.jpg" alt="img">
+                    <img src="media\בתןך הפודקאסט פי 2 (2).png" alt="img">
                  </div>
             </a>
             <a href="/תכניות/יום-הולדת-75-לדני-סנדרסון/" class="card">
