--- a/podcastsPage.html
+++ b/podcastsPage.html
@@ -11,17 +11,20 @@
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;family=Rubik:ital,wght@0,300..900;1,300..900&amp;display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/NavigationBarStyle.css">
     <link rel="stylesheet" href="css/footer.css">
-    <script src="js/newPodcastsEpisodesScript.js" ></script>
 
-	<!-- Bootstrap JS -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
+<script async>
   fetch("partials/footer.html")
   .then(res => res.text())
   .then(html => {
     document.getElementById("footer").innerHTML = html;
   });
 </script>
+
+    <script src="js/newPodcastsEpisodesScript.js" ></script>
+
+	<!-- Bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 
 </head>
 
