--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
   margin-right: -12px;
   margin-left: -12px;
   height: 270px;
-  object-fit: cover;
+  /* object-fit: cover; */
   overflow: hidden;
 }
 
